--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,19 @@
 		    <artifactId>jsoup</artifactId>
 		    <version>1.8.1</version>
 		</dependency>
+     <!-- this is norah-->
+        <dependency>
+        	<groupId>org.slf4j</groupId>
+        	<artifactId>slf4j-api</artifactId>
+        	<version>1.7.5</version>
+        </dependency>
+      
+        <dependency>
+        	<groupId>ch.qos.logback</groupId>
+        	<artifactId>logback-classic</artifactId>
+        	<version>1.0.13</version>
+        </dependency>
+          <!-- end norah-->
 	</dependencies>
 
 	<build>
