--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 <dependency>
 	<groupId>joda-time</groupId>
 	<artifactId>joda-time</artifactId>
-	<version>2.9.2</version>
+	<version>2.9.2</version><!--$NO-MVN-MAN-VER$-->
 </dependency>
 <!-- end -->
 		<dependency>
@@ -58,14 +58,14 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.12</version><!--$NO-MVN-MAN-VER$-->
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>1.2.0.RELEASE</version>
+            <version>1.2.0.RELEASE</version><!--$NO-MVN-MAN-VER$-->
             <scope>test</scope>
         </dependency>
 
@@ -78,15 +78,16 @@
         <dependency>
         	<groupId>org.slf4j</groupId>
         	<artifactId>slf4j-api</artifactId>
-        	<version>1.7.5</version>
+        	<version>1.7.5</version><!--$NO-MVN-MAN-VER$-->
         </dependency>
       
         <dependency>
         	<groupId>ch.qos.logback</groupId>
         	<artifactId>logback-classic</artifactId>
-        	<version>1.0.13</version>
+        	<version>1.0.13</version><!--$NO-MVN-MAN-VER$-->
         </dependency>
           <!-- end norah-->
+          
 	</dependencies>
 
 	<build>
